test/corpus/function.txt
================================================================================
Empty parameter and body
================================================================================

func myfunc() {
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block)))

================================================================================
Single parameter
================================================================================

func myfunc(param1) {
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter_list
      (parameter_declaration
        (identifier)))
    (block)))

================================================================================
Single default parameter
================================================================================

func myfunc(param1 = 123) {
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter_list
      (parameter_declaration_default
        (identifier)
        (int_literal)))
    (block)))

================================================================================
Multiple parameters without trailing comma
================================================================================

func myfunc(param1, param2, param3) {
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter_list
      (parameter_declaration
        (identifier))
      (parameter_declaration
        (identifier))
      (parameter_declaration
        (identifier)))
    (block)))

================================================================================
Multiple parameters with trailing comma
================================================================================

func myfunc(param1, param2, param3,) {
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter_list
      (parameter_declaration
        (identifier))
      (parameter_declaration
        (identifier))
      (parameter_declaration
        (identifier)))
    (block)))

================================================================================
Single body statement
================================================================================

func myfunc() {
  123
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (expression_statement
        (int_literal)))))

================================================================================
Multiple body statements
================================================================================

func myfunc() {
  123
  456
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (expression_statement
        (int_literal))
      (expression_statement
        (int_literal)))))
