test/corpus/literal_func.txt
================================================================================
No arguments
================================================================================

func() {}

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (func_literal
      (parameter_list)
      (block))))

================================================================================
With arguments
================================================================================

func(a, b, c = 123) {}

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (func_literal
      (parameter_list
        (parameter_declaration
          (identifier))
        (parameter_declaration
          (identifier))
        (parameter_declaration_default
          (identifier)
          (int_literal)))
      (block))))

================================================================================
Called immediately
================================================================================

func() {}()

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (call_expression
      (func_literal
        (parameter_list)
        (block))
      (argument_list))))
