test/corpus/literal_string.txt
================================================================================
Double quoted string
================================================================================

"text"

--------------------------------------------------------------------------------

(source_file
  (string))

================================================================================
Double quoted string escape sequence
================================================================================

"new\nline"

--------------------------------------------------------------------------------

(source_file
  (string
    (escape_sequence)))

================================================================================
Single quoted string
================================================================================

'text'

--------------------------------------------------------------------------------

(source_file
  (string_template
    (string_template_plain)))

================================================================================
Single quoted string escape sequence
================================================================================

'new\nline'

--------------------------------------------------------------------------------

(source_file
  (string_template
    (string_template_plain)
    (escape_sequence)
    (string_template_plain)))

================================================================================
Interpolated string with string
================================================================================

'text {"another string in here"}'

--------------------------------------------------------------------------------

(source_file
  (string_template
    (string_template_plain)
    (string_template_argument
      (string))))

================================================================================
Interpolated string with integer
================================================================================

'text {123}'

--------------------------------------------------------------------------------

(source_file
  (string_template
    (string_template_plain)
    (string_template_argument
      (int_literal))))

================================================================================
String backticks
================================================================================

`text`

--------------------------------------------------------------------------------

(source_file
  (string_backtick))
