test/corpus/statement_declaration.txt
================================================================================
Const
================================================================================

const a = 1

--------------------------------------------------------------------------------

(source_file
  (const_declaration
    (identifier)
    (int_literal)))

================================================================================
Var
================================================================================

var a = 1

--------------------------------------------------------------------------------

(source_file
  (var_declaration
    (identifier)
    (int_literal)))

================================================================================
Short var
================================================================================

a := 1

--------------------------------------------------------------------------------

(source_file
  (short_var_declaration
    (identifier)
    (int_literal)))
